--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% block link_file %}
+
+    <script src="{{url_for('static',filename = 'js/aadhaev.js')}}"></script>
+{% endblock %}
 {% block header %}
     <a class="navbar-brand" href="#">Department of Telecommunications Ministry of Communication</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -39,7 +43,7 @@
                         {% for message in success %}
                             {{ message }}
                             <div class="warning-box-footer">
-                                <button type="button" class="btn btn-primary float-right" data-toggle="modal"
+                                <button  type="button" class="btn btn-primary float-right" data-toggle="modal"
                                         data-target="#myModal" id="success">
                                     Okay!
                                 </button>
@@ -70,18 +74,20 @@
                             </div>
                             <div class="card-body">
                                 <form class="form" role="form" autocomplete="on" id="formLogin" method="POST"
-                                      action="{{ url_for('.home') }}">
+                                      action="{{ url_for('.home') }}" onsubmit="return validate()">
                                     <div class="form-group">
                                         <div class="form-group">
                                             <label for="aadhaar_no">Aadhaar Number<span
                                                     class="text-danger">*</span></label>
                                             <input type="text" class="form-control form-control-lg rounded"
-                                                   name="aadhaar_no" id="aadhaar_no" required="required">
+                                                   name="aadhaar_no" id="age" required="required">
+                                              <div class="valid-feedback">Success! You've done it.</div>
+                                              <div class="invalid-feedback">Please fill your 12 digit aadhaar</div>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <button type="submit" class="btn btn-success btn-sm float-right"
-                                                id="btnLogin">Send OTP
+                                                id="btnLogin" ons>Send OTP
                                         </button>
                                     </div>
                                 </form>
