--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block link_file %}
 
-    <script src="{{url_for('static',filename = 'js/aadhaev.js')}}"></script>
+    <script src="{{url_for('static',filename = 'js/aadharv.js')}}"></script>
 {% endblock %}
 {% block header %}
     <a class="navbar-brand" href="#">Department of Telecommunications Ministry of Communication</a>
