--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block link_file %}
 
-    <script src="{{url_for('static',filename = 'js/aadharv.js')}}"></script>
 {% endblock %}
+
 {% block header %}
     <a class="navbar-brand" href="#">Department of Telecommunications Ministry of Communication</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -130,4 +130,7 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block javascript %}
+    <script src="{{url_for('static',filename = 'js/aadharv.js')}}"></script>
 {% endblock %}
