--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -38,7 +38,7 @@
                                     aria-label="Close">
                                 <span aria-hidden="true">&times;</span></button>
                         </h2>
-                        <p id="demo"></p>
+                        <p id="demo">Invalid Aadhaar</p>
                     </div>
                     <div class="container warning-box-body">
                         {% for message in success %}
