--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -38,7 +38,6 @@
                                     aria-label="Close">
                                 <span aria-hidden="true">&times;</span></button>
                         </h2>
-                        <p id="demo">Invalid Aadhaar</p>
                     </div>
                     <div class="container warning-box-body">
                         {% for message in success %}
@@ -84,6 +83,7 @@
                                                    name="aadhaar_no" id="age" required="required">
                                               <div class="valid-feedback">Success! You've done it.</div>
                                               <div class="invalid-feedback">Please fill your 12 digit aadhaar</div>
+                                              <div id ="demo">No, you missed this one.</div>
                                         </div>
                                     </div>
                                     <div class="form-group">
