--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -80,7 +80,7 @@
                                             <label for="aadhaar_no">Aadhaar Number<span
                                                     class="text-danger">*</span></label>
                                             <input type="text" class="form-control form-control-lg rounded"
-                                                   name="aadhaar_no" id="age" required="required">
+                                                   name="aadhaar_no" id="age" required>
                                               <div class="valid-feedback">Success! You've done it.</div>
                                               <div class="invalid-feedback">Please fill your 12 digit aadhaar</div>
                                         </div>
