--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -81,8 +81,8 @@
                                                     class="text-danger">*</span></label>
                                             <input type="text" class="form-control form-control-lg rounded"
                                                    name="aadhaar_no" id="age" required>
-                                              <div class="valid-feedback">Success! You've done it.</div>
-                                              <div class="invalid-feedback">Please fill your 12 digit aadhaar</div>
+                                              <div id="feedback" class="valid-feedback">Success! You've done it.</div>
+                                              <div id="notfeedback" class="invalid-feedback">Please fill your 12 digit aadhaar</div>
                                         </div>
                                     </div>
                                     <div class="form-group">
