--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -82,7 +82,7 @@
                                             <input type="text" class="form-control form-control-lg rounded"
                                                    name="aadhaar_no" id="age" required>
                                               <div id="feedback" class="valid-feedback">Success! You've done it.</div>
-                                              <div id="notfeedback" class="invalid-feedback">Please fill your 12 digit aadhaar</div>
+                                              <div id="notfeedback" class="invalid-feedback">Please Check Your Aadhaar</div>
                                         </div>
                                     </div>
                                     <div class="form-group">
