--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -81,8 +81,8 @@
                                                     class="text-danger">*</span></label>
                                             <input type="text" class="form-control form-control-lg rounded"
                                                    name="aadhaar_no" id="age" required>
-                                              <div id="feedback" class="valid-feedback" disabled>Success! You've done it.</div>
-                                              <div id="notfeedback" class="invalid-feedback" disabled>Please Check Your Aadhaar</div>
+                                              <div id="feedback" class="valid-feedback" >Success! You've done it.</div>
+                                              <div id="notfeedback" class="invalid-feedback" >Please Check Your Aadhaar</div>
                                         </div>
                                     </div>
                                     <div class="form-group">
