--- a/src/templates/dot/login.html
+++ b/src/templates/dot/login.html
@@ -2,6 +2,9 @@
 {% block title %}DOT's Dashboard{% endblock %}
 {% block link_file %}
 
+    <link rel="stylesheet" href="{{ url_for('static',filename="css/style1.css") }}">
+     <link rel="stylesheet" href="{{ url_for('static',filename="css/font1(1).css") }}">
+
     <script src="{{url_for('static',filename = 'js/loginv.js')}}"></script>
 {% endblock %}
 
@@ -40,20 +43,23 @@
                 <div class="panel-body">
                     <form role="form" action="{{ url_for('admin.login_user')}}" method="POST">
                         <fieldset>
-                            <div class="form-group">
+                            <div class="form-group pom-agile">
                                 <label class="form-control-label" for="inputSuccess1">Username:</label>
+                                <span class="fa fa-user-o" aria-hidden="true"></span>
                                 <input type="text" class="form-control" name="i1" id="inputSuccess1"  placeholder="Username"required>
                                 <div class="valid-feedback">Success! You've done it.</div>
                                 <div class="invalid-feedback">No, you missed this one.</div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pom-agile">
                                <label class="form-control-label" for="inputSuccess2">Password:</label>
+                                 <span class="fa fa-user-o" aria-hidden="true"></span>
                                <input type="Password" class="form-control" name="i2" required id="inputSuccess2" placeholder="Password" required>
                                 <div class="valid-feedback">Nice! You got this one!</div>
                                 <div class="invalid-feedback">Sorry, you missed this one.</div>
                             </div>
-                            <div>
+                            <div class="right-w3l>
                             <input class="btn btn-lg btn-success btn-block" type="submit" id="btnSubmit" value="Login">
+                            </div>
                         </fieldset>
                     </form>
                 </div>
