--- a/src/templates/dot/login.html
+++ b/src/templates/dot/login.html
@@ -33,6 +33,8 @@
     </div>
 {% endblock %}
 {% block body %}
+    <div class="main-content-agile">
+    <div class="sub-main-w3">
     <div class="center-wrapper">
         <div class="center-container">
             <div class="panel panel-default border border-light bg-light">
@@ -65,5 +67,7 @@
                 </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
 {% endblock %}
