--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block link_file %}
 <link rel="stylesheet" href="{{ url_for('static',filename="js/otpu.js") }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename="js/aadharv.js") }}">
 {% endblock %}
 
 {% block header %}
