--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -75,7 +75,7 @@
                             </div>
                             <div class="card-body">
                                 <form class="form" role="form" autocomplete="on" id="formLogin" method="POST"
-                                      action="{{ url_for('.home') }}" onsubmit="return validate()">
+                                      action="{{ url_for('.home') }}" >
                                     <div class="form-group">
                                         <div class="form-group">
                                             <label for="aadhaar_no">Aadhaar Number<span
