--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block link_file %}
 
-   <script  src="{{ url_for('static',filename="js/aadharv.js") }}"></script>
+   <script type="application/javascript" src="{{ url_for('static',filename="js/aadharv.js") }}"></script>
 {% endblock %}
 
 {% block header %}
