--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block link_file %}
+{% block javascript %}
 
     <script src="{{ url_for('static',filename="js/aadharv.js") }}"></script>
 {% endblock %}
