--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 
-{% block header %}<a class="navbar-brand" href="#">Department of Telecommunications Ministry of Communication</a>
+{% block header %}
+    <a class="navbar-brand" href="#">Department of Telecommunications Ministry of Communication</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
