--- a/src/templates/dot/login.html
+++ b/src/templates/dot/login.html
@@ -56,8 +56,8 @@
                                 <div class="valid-feedback">Nice! You got this one!</div>
                                 <div class="invalid-feedback">Sorry, you missed this one.</div>
                             </div>
-                            <div class="right-w3l>
-                            <input class="btn btn-lg btn-success btn-block"  type="submit" id="btnSubmit" value="Login">
+                            <div>
+                            <input class = "btn btn-lg btn-success btn-block"  type="submit" id="btnSubmit" value="Login">
                             </div>
                         </fieldset>
                     </form>
