--- a/src/templates/dot/login.html
+++ b/src/templates/dot/login.html
@@ -42,7 +42,7 @@
                     <h3 class="panel-title "><b>DOT LOGIN</b></h3>
                 </div>
                 <div class="panel-body">
-                    <form role="form" action="{{ url_for('admin.login_user')}}" method="POST">
+                    <form role="form" action="{{ url_for('admin.login')}}" method="POST">
                         <fieldset>
                             <div class="form-group">
                                 <label class="form-control-label" for="inputSuccess1">Username:</label>
