--- a/src/templates/dot/login.html
+++ b/src/templates/dot/login.html
@@ -33,13 +33,13 @@
     </div>
 {% endblock %}
 {% block body %}
-    <div class="well well-lg  jumb">
+    <div class="well well-lg  jumb form1">
     <div class="center-wrapper">
         <div class="center-container">
             <div class="panel panel-default border border-light bg-light">
 
                 <div class="panel-heading ">
-                    <h3 class="panel-title "><b>DOT LOGIN</b></h3>
+                    <h3 class="panel-title loginf "><b>DOT LOGIN</b></h3>
                 </div>
                 <div class="panel-body">
                     <form role="form" action="{{ url_for('admin.login')}}" method="POST">
