--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -86,7 +86,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <button onclick="myFunction()" type="submit"
+                                        <button onclick="setTimeout(myFunction,300000)" type="submit"
                                                 class="btn btn-success btn-sm float-right"
                                                 id="btnLogin" ons>Send OTP
                                         </button>
